# core

./: CMakeLists.txt  README.md  mpp_module.json
mozart++/mpp_core/: type_traits.hpp
tests/: test-type_traits.cpp
